--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+:root {
+  box-sizing: border-box; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+::before,
+::after {
+  box-sizing: inherit; 
+} 
+
+.navbar {
+    margin: 2em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+    margin-top: 0.5em;
+    list-style: none;
+    background-color: red;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li {
+    display: inline-block;
+    padding: 0.2em;
 }
 
-.App-link {
-  color: #61dafb;
+.brand {
+    padding: 0.5em;
+    flex-basis: 90%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pizzaBrand {
+    width: 2em;
+    padding: 0.5em;
 }
+
+.categories {
+    flex-basis: 100%;
+    padding: 0;
+}
+
+.cartWidget {
+    align-self: center; 
+    flex-basis: 10%;
+}
+
+.cartIcon {
+    width: 2em;
+}
+
+.greeting {
+    text-align: center;
+}
+
+
