--- a/src/App.css
+++ b/src/App.css
@@ -54,4 +54,31 @@ li {
     text-align: center;
 }
 
+.items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 10px 20px;
+    background-color: white;
+}
 
+.item {
+    padding-left: 1em;
+    border: 1px solid black;
+    width:  20vh;  
+    height: 25vh;
+}
+
+.item--img {
+    padding-top: 1em;
+    max-width:   80%;  
+    max-height:  50%;  
+}
+
+.item--title {
+    font-weight: bolder;
+}
+
+.item--price {
+    color: red;
+}
